--- a/index.html
+++ b/index.html
@@ -1,12 +1,68 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bramble</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-    
-</body>
+    <!-- fontawesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- css -->
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <!-- 헤더 -->
+    <header class="header">
+      <div class="header-inner">
+        <!-- 메뉴 -->
+        <div class="menu">
+          <span>MENU</span>
+          <div class="menu-list">
+            <ul class="menu-product">
+              <li><a href="#">RING</a></li>
+              <li><a href="#">KEYRING</a></li>
+              <li><a href="#">EARRING</a></li>
+              <li><a href="#">NECKLACE</a></li>
+              <li><a href="#">BRACELET</a></li>
+              <li><a href="#">B.R.B</a></li>
+              <li><a href="#">CONTRA</a></li>
+              <li><a href="#">REVOLVE</a></li>
+              <li><a href="#">MAGNETIC</a></li>
+              <li><a href="#">SNAKE CAVE</a></li>
+              <li><a href="#">PEARL IN THE WAVE</a></li>
+              <li><a href="#">EXPRESSION & THINK</a></li>
+            </ul>
+            <ul class="menu-etc">
+              <li><a href="#">ABOUT</a></li>
+              <li><a href="#">LOOKBOOK</a></li>
+              <li><a href="#">PRESS</a></li>
+              <li><a href="#">NOTICE</a></li>
+              <li><a href="#">Q&A</a></li>
+              <li><a href="#">REVIEW</a></li>
+            </ul>
+          </div>
+        </div>
+        <!-- 로고 -->
+        <a href="#" class="logo"><img src="images/logo_black.png" alt="bramble logo" /></a>
+        <!-- 마이페이지 -->
+        <div class="mypage">
+          <ul class="mypage-menu">
+            <li>
+              <a href="#"><i class="fa-solid fa-cart-shopping" style="color: #000000"></i>(0)</a>
+            </li>
+            <li><a href="#">login</a></li>
+            <li><a href="#">mypage</a></li>
+          </ul>
+        </div>
+      </div>
+    </header>
+    <!-- 비주얼 -->
+    <div class="visual">
+      <ul class="visual-slide">
+        <li><img src="images/visual-slide/bramble-1.jpg" alt="bramble1" /></li>
+        <li><img src="images/visual-slide/bramble-2.jpg" alt="bramble2" /></li>
+        <li><img src="images/visual-slide/bramble-23.jpg" alt="bramble23" /></li>
+        <li><img src="images/visual-slide/bramble-16.jpg" alt="bramble16" /></li>
+      </ul>
+    </div>
+  </body>
 </html>
