earring hover 수정 / aboutB 배경 이미지까지
헤더 메뉴 hover 오류 있음/ acc caption 폰트 사이즈 안 먹음

--- a/index.html
+++ b/index.html
@@ -99,32 +99,40 @@
           <div class="earring-item">
             <ul>
               <li>
-                <a href="#"><img src="images/earring/earring_item (1).jpg" alt="earring_item1" /></a>
-                <div class="caption">
-                  <p>Blue Black Crystal Earring</p>
-                  <p>KRW 58,000</p>
-                </div>
+                <a href="#"
+                  ><img src="images/earring/earring_item (1).jpg" alt="earring_item1" />
+                  <div class="caption">
+                    <p>Blue Black Crystal Earring</p>
+                    <p>KRW 58,000</p>
+                  </div>
+                </a>
               </li>
               <li>
-                <a href="#"><img src="images/earring/earring_item (2).jpg" alt="earring_item2" /></a>
-                <div class="caption">
-                  <p>Blue Black Crystal Earring</p>
-                  <p>KRW 58,000</p>
-                </div>
+                <a href="#"
+                  ><img src="images/earring/earring_item (2).jpg" alt="earring_item2" />
+                  <div class="caption">
+                    <p>Blue Black Crystal Earring</p>
+                    <p>KRW 58,000</p>
+                  </div>
+                </a>
               </li>
               <li>
-                <a href="#"><img src="images/earring/earring_item (3).jpg" alt="earring_item3" /></a>
-                <div class="caption">
-                  <p>Blue Black Crystal Earring</p>
-                  <p>KRW 58,000</p>
-                </div>
+                <a href="#"
+                  ><img src="images/earring/earring_item (3).jpg" alt="earring_item3" />
+                  <div class="caption">
+                    <p>Blue Black Crystal Earring</p>
+                    <p>KRW 58,000</p>
+                  </div>
+                </a>
               </li>
               <li>
-                <a href="#"><img src="images/earring/earring_item (4).jpg" alt="earring_item4" /></a>
-                <div class="caption">
-                  <p>Blue Black Crystal Earring</p>
-                  <p>KRW 58,000</p>
-                </div>
+                <a href="#"
+                  ><img src="images/earring/earring_item (4).jpg" alt="earring_item4" />
+                  <div class="caption">
+                    <p>Blue Black Crystal Earring</p>
+                    <p>KRW 58,000</p>
+                  </div>
+                </a>
               </li>
             </ul>
           </div>
@@ -133,6 +141,11 @@
     </section>
     <!-- aboutA -->
     <section class="aboutA">
+      <div class="aboutA-bg">
+        <img src="images/about/about1-pc.jpg" alt="about-1" class="aboutA-pc" />
+        <img src="images/about/about1-tablet.jpg" alt="about-1" class="aboutA-tablet" />
+        <img src="images/about/about1-mobile.jpg" alt="about-1" class="aboutA-mobile" />
+      </div>
       <div class="about-inner inner">
         <div class="aboutA-txt">
           <img src="images/logo_about (1).png" alt="brambleLogo" />
@@ -149,9 +162,109 @@
       <div class="ring-inner inner">
         <!-- PRODUCT -->
         <img src="images/ring/ring-product.jpg" class="ring-product" />
-
-        <!-- <img src="images/ring/ring-back.jpg" alt="ring1" class="ring-back" />
-          <img src="images/ring/ring-front.jpg" alt="ring1" class="ring-front" /> -->
+        <!-- VIEW MORE -->
+        <div class="ring-viewMore">
+          <h1>RING</h1>
+          <img src="images/ring/ring.jpg" alt="Ring" / class="ring-img">
+          <button class="viewMore">VIEW MORE</button>
+        </div>
+      </div>
+    </section>
+    <!-- acc -->
+    <section class="acc">
+      <div class="acc-inner inner">
+        <div class="necklace">
+          <ul>
+            <li>
+              <a href="#"
+                ><img src="images/necklace/necklace (1).jpg" alt="necklace1" />
+                <div class="acc-caption">
+                  <p>Blue Black Crystal Earring</p>
+                  <p>KRW 58,000</p>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="#"><p>NECKLACE</p></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img src="images/necklace/necklace (3).jpg" alt="necklace3" />
+                <div class="acc-caption">
+                  <p>Blue Black Crystal Earring</p>
+                  <p>KRW 58,000</p>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="#"
+                ><img src="images/necklace/necklace (4).jpg" alt="necklace2" />
+                <div class="acc-caption">
+                  <p>Blue Black Crystal Earring</p>
+                  <p>KRW 58,000</p>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="keyring">
+          <ul>
+            <li>
+              <a href="#"
+                ><img src="images/keyring/keyring (1).jpg" alt="keyring1" />
+                <div class="acc-caption">
+                  <p>Blue Black Crystal Earring</p>
+                  <p>KRW 58,000</p>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="#"
+                ><img src="images/keyring/keyring (2).jpg" alt="keyring2" />
+                <div class="acc-caption">
+                  <p>Blue Black Crystal Earring</p>
+                  <p>KRW 58,000</p>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="#"><p>KEYRING</p></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img src="images/keyring/keyring (4).jpg" alt="keyring3" />
+                <div class="acc-caption">
+                  <p>Blue Black Crystal Earring</p>
+                  <p>KRW 58,000</p>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <!-- aboutB -->
+    <section class="aboutB">
+      <img src="images/about/about2.jpg" alt="aboutB" />
+      <div class="aboutB-inner inner">
+        <!-- logo -->
+        <img src="images/logo_B_w.png" alt="logo" / class="aboutB-logo">
+        <div class="about-creativity">
+          <img src="images/logo_about_w (2).png" alt="logoB" />
+          <h1>창조성</h1>
+          <p>
+            브람블 (Bramble) 의 동양적인 느낌을 담아<br />
+            예술의 기초를 표현하는 붓글씨의 그림적인 요소 내포
+          </p>
+        </div>
+        <div class="about-durability">
+          <img src="images/logo_about_w (1).png" alt="logoR" />
+          <h1>지속성</h1>
+          <p>
+            B에서 R의 뿌리가 솟아나는 그림으로<br />
+            억센 나무같이 끝없이 자라나는 브랜드가 되는 의미
+          </p>
+        </div>
       </div>
     </section>
   </body>
