aboutB / acc caption 수정

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
               </a>
             </li>
             <li>
-              <a href="#"><p>NECKLACE</p></a>
+              <a href="#"><p class="acc-title">NECKLACE</p></a>
             </li>
             <li>
               <a href="#"
@@ -228,7 +228,7 @@
               </a>
             </li>
             <li>
-              <a href="#"><p>KEYRING</p></a>
+              <a href="#"><p class="acc-title">KEYRING</p></a>
             </li>
             <li>
               <a href="#"
@@ -248,22 +248,35 @@
       <img src="images/about/about2.jpg" alt="aboutB" />
       <div class="aboutB-inner inner">
         <!-- logo -->
-        <img src="images/logo_B_w.png" alt="logo" / class="aboutB-logo">
-        <div class="about-creativity">
-          <img src="images/logo_about_w (2).png" alt="logoB" />
-          <h1>창조성</h1>
-          <p>
-            브람블 (Bramble) 의 동양적인 느낌을 담아<br />
-            예술의 기초를 표현하는 붓글씨의 그림적인 요소 내포
-          </p>
-        </div>
-        <div class="about-durability">
-          <img src="images/logo_about_w (1).png" alt="logoR" />
-          <h1>지속성</h1>
-          <p>
-            B에서 R의 뿌리가 솟아나는 그림으로<br />
-            억센 나무같이 끝없이 자라나는 브랜드가 되는 의미
-          </p>
+        <p class="aboutB-logo">
+          <img src="images/logo_B_w.png" alt="logo" />
+        </p>
+        <div class="aboutB-caption">
+          <div class="about-creativity">
+            <p class="aboutB-logoB">
+              <img src="images/logo_about_w (2).png" alt="logoB" />
+            </p>
+            <div class="aboutB-txt">
+
+              <h1>창조성</h1>
+              <p>
+                브람블 (Bramble) 의 동양적인 느낌을 담아<br />
+                예술의 기초를 표현하는 붓글씨의 그림적인 요소 내포
+              </p>
+            </div>
+          </div>
+          <div class="about-durability">
+            <p class="aboutB-logoB">
+              <img src="images/logo_about_w (1).png" alt="logoR" />
+            </p>
+            <div class="aboutB-txt">
+              <h1>지속성</h1>
+              <p>
+                B에서 R의 뿌리가 솟아나는 그림으로<br />
+                억센 나무같이 끝없이 자라나는 브랜드가 되는 의미
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
