--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <!-- seo 엔진 최적화 -->
+    <!-- seo 엔진 최적화 -->
     <!-- 웹페이지의 설명을 정의 -->
     <meta name="description" content="브람블 웹사이트" />
     <!-- 웹페이지와 관련된 키워드를 정의 -->
@@ -37,7 +37,7 @@
     <!-- swipe css -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <!-- js -->
-    <script src="js/bramble.js"></script>
+    <script src="js/swipe.js"></script>
     <!-- jquery -->
     <!-- swiper js -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
@@ -283,7 +283,6 @@
               <img src="images/logo_about_w (2).png" alt="logoB" />
             </p>
             <div class="aboutB-txt">
-
               <h1>창조성</h1>
               <p>
                 브람블 (Bramble) 의 동양적인 느낌을 담아<br />
@@ -306,5 +305,59 @@
         </div>
       </div>
     </section>
+    <!-- Review -->
+    <section class="review">
+      <h1>REVIEW</h1>
+      <div class="swiper review-slide">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <div class="review-content">
+              <img src="images/earring/earring_pic (1).jpg" alt="" />
+              <div class="review-txt">
+                <p class="nickname">NICKNAME</p>
+                <p>진짜 예뻐요. 어떤 옷에도 잘 어울리고, 포인트가 되어줘서 마음에 듭니다.</p>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="review-content">
+              <img src="images/earring/earring_pic (1).jpg" alt="" />
+              <div class="review-txt">
+                <p class="nickname">NICKNAME</p>
+                <p>진짜 예뻐요. 어떤 옷에도 잘 어울리고, 포인트가 되어줘서 마음에 듭니다.</p>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="review-content">
+              <img src="images/earring/earring_pic (1).jpg" alt="" />
+              <div class="review-txt">
+                <p class="nickname">NICKNAME</p>
+                <p>진짜 예뻐요. 어떤 옷에도 잘 어울리고, 포인트가 되어줘서 마음에 듭니다.</p>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="review-content">
+              <img src="images/earring/earring_pic (1).jpg" alt="" />
+              <div class="review-txt">
+                <p class="nickname">NICKNAME</p>
+                <p>진짜 예뻐요. 어떤 옷에도 잘 어울리고, 포인트가 되어줘서 마음에 듭니다.</p>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="review-content">
+              <img src="images/earring/earring_pic (1).jpg" alt="" />
+              <div class="review-txt">
+                <p class="nickname">NICKNAME</p>
+                <p>진짜 예뻐요. 어떤 옷에도 잘 어울리고, 포인트가 되어줘서 마음에 듭니다.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer class="footer"></footer>
   </body>
 </html>
