--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- 웹페이지와 관련된 키워드를 정의 -->
     <meta name="keywords" content="Bramble, 브람블" />
     <!-- 웹페이지의 저자를 정의  -->
-    <meta name="author" content="STX건설" />
+    <meta name="author" content="브람블" />
     <!-- 소셜 미디어에서 페이지가 공유될때 사용되는 제목 -->
     <meta property="og:title" content="Bramble" />
     <!-- 소셜 미디어에서 페이지가 공유될 때 표시되는 사이트 이름 -->
@@ -22,7 +22,7 @@
     <!-- 소셜 미디어에서 페이지가 공유될 때 표시되는 이미지 -->
     <meta property="og:image" content="https://songcheawon.github.io/bramble/images/visual-slide/bramble-23.jpg" />
     <!-- 소셜 미디어에서 페이지가 공유될 때 사용되는 설명 -->
-    <meta property="og:description" content="STX건설 웹사이트입니다." />
+    <meta property="og:description" content="브람블" />
     <title>Bramble</title>
     <!-- favicon -->
     <link rel="icon" type="image/png" href="assets/favicon/favicon-96x96.png" sizes="96x96" />
@@ -36,7 +36,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <!-- css -->
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/responsive.css" />
     <!-- jquery -->
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <!-- swiper js -->
@@ -56,30 +56,30 @@
         <!-- 메뉴 -->
         <div class="menu">
           <span>MENU</span>
-            <div class="menu-list">
-              <ul class="menu-product">
-                <li><a href="#">RING</a></li>
-                <li><a href="#">KEYRING</a></li>
-                <li><a href="#">EARRING</a></li>
-                <li><a href="#">NECKLACE</a></li>
-                <li><a href="#">BRACELET</a></li>
-                <li><a href="#">B.R.B</a></li>
-                <li><a href="#">CONTRA</a></li>
-                <li><a href="#">REVOLVE</a></li>
-                <li><a href="#">MAGNETIC</a></li>
-                <li><a href="#">SNAKE CAVE</a></li>
-                <li><a href="#">PEARL IN THE WAVE</a></li>
-                <li><a href="#">EXPRESSION & THINK</a></li>
-              </ul>
-              <ul class="menu-etc">
-                <li><a href="#">ABOUT</a></li>
-                <li><a href="#">LOOKBOOK</a></li>
-                <li><a href="#">PRESS</a></li>
-                <li><a href="#">NOTICE</a></li>
-                <li><a href="#">Q&A</a></li>
-                <li><a href="#">REVIEW</a></li>
-              </ul>
-            </div>
+          <div class="menu-list">
+            <ul class="menu-product">
+              <li><a href="#">RING</a></li>
+              <li><a href="#">KEYRING</a></li>
+              <li><a href="#">EARRING</a></li>
+              <li><a href="#">NECKLACE</a></li>
+              <li><a href="#">BRACELET</a></li>
+              <li><a href="#">B.R.B</a></li>
+              <li><a href="#">CONTRA</a></li>
+              <li><a href="#">REVOLVE</a></li>
+              <li><a href="#">MAGNETIC</a></li>
+              <li><a href="#">SNAKE CAVE</a></li>
+              <li><a href="#">PEARL IN THE WAVE</a></li>
+              <li><a href="#">EXPRESSION & THINK</a></li>
+            </ul>
+            <ul class="menu-etc">
+              <li><a href="#">ABOUT</a></li>
+              <li><a href="#">LOOKBOOK</a></li>
+              <li><a href="#">PRESS</a></li>
+              <li><a href="#">NOTICE</a></li>
+              <li><a href="#">Q&A</a></li>
+              <li><a href="#">REVIEW</a></li>
+            </ul>
+          </div>
         </div>
         <!-- 로고 -->
         <a href="#" class="logo"><img src="images/logo_black.png" alt="bramble logo" /></a>
