--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
   </head>
   <body>
     <!-- go to top -->
-    <div class="top-btn">
-      <i class="fa-solid fa-chevron-up"></i>
-    </div>
+      <div class="top-btn">
+        <i class="fa-solid fa-chevron-up"></i>
+      </div>
     <!-- 헤더 -->
     <header class="header">
       <div class="header-inner">
@@ -181,7 +181,7 @@
       </div>
       <div class="about-inner inner">
         <div class="aboutA-txt">
-          <img src="images/logo_about (1).png" alt="brambleLogo" />
+          <img src="images/logo_B.png" alt="brambleLogo" />
           <h1>브람블 (BRAMBLE), 억새의 꽃</h1>
           <p>
             Bramble 은 깨달음과 경험, 감각을 기준으로<br />
@@ -218,7 +218,10 @@
               </a>
             </li>
             <li>
-              <a href="#"><p class="acc-title">NECKLACE</p></a>
+              <a href="#"
+                ><p class="acc-title">NECKLACE</p>
+                <p class="necklaceline line"></p
+              ></a>
             </li>
             <li>
               <a href="#"
@@ -261,7 +264,10 @@
               </a>
             </li>
             <li>
-              <a href="#"><p class="acc-title">KEYRING</p></a>
+              <a href="#"
+                ><p class="acc-title">KEYRING</p>
+                <p class="keyringline line"></p
+              ></a>
             </li>
             <li>
               <a href="#"
@@ -281,9 +287,7 @@
       <img src="images/about/about2.jpg" alt="aboutB" />
       <div class="aboutB-inner inner">
         <!-- logo -->
-        <p class="aboutB-logo">
-          <img src="images/logo_B_w.png" alt="logo" />
-        </p>
+
         <div class="aboutB-caption">
           <div class="about-creativity">
             <p class="aboutB-logoB">
@@ -310,11 +314,16 @@
             </div>
           </div>
         </div>
+        <p class="aboutB-logo">
+          <img src="images/logo_B_w.png" alt="logo" />
+        </p>
       </div>
     </section>
     <!-- Review -->
     <section class="review">
-      <h1>REVIEW</h1>
+      <a href="#">
+        <h1>REVIEW</h1>
+      </a>
       <div class="swiper review-slide">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
