반응형 모바일
ring product까지

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     <section class="ring">
       <div class="ring-inner inner">
         <!-- PRODUCT -->
-        <img src="images/ring/ring-product.jpg" class="ring-product" />
+        <img src="images/ring/ring-product.jpg" class="ring-product" alt="ring-pic" />
         <!-- VIEW MORE -->
         <div class="ring-viewMore">
           <h1>RING</h1>
