--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
             <li><a href="#">login</a></li>
             <li><a href="#">mypage</a></li>
           </ul>
+          <a href="#">
+            <i id="mypage-mobile" class="fa-solid fa-bars"></i>
+          </a>
         </div>
       </div>
     </header>
@@ -221,7 +224,9 @@
               <a href="#"
                 ><p class="acc-title">NECKLACE</p>
                 <p class="necklaceline line"></p
-              ></a>
+              >
+          
+            </a>
             </li>
             <li>
               <a href="#"
@@ -328,7 +333,25 @@
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <div class="review-content">
-              <img src="images/earring/earring_pic (1).jpg" alt="" />
+              <img src="images/reviewImg/review (1).jpg" alt="review" />
+              <div class="review-txt">
+                <p class="nickname">NICKNAME</p>
+                <p>이 악세사리 하나로 스타일이 확 살아나요. 가격도 괜찮고 좋아요!</p>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="review-content">
+              <img src="images/reviewImg/review (2).jpg" alt="review" />
+              <div class="review-txt">
+                <p class="nickname">NICKNAME</p>
+                <p>디자인이 세련되고, 생각보다 다양하게 활용할 수 있어요.</p>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="review-content">
+              <img src="images/reviewImg/review (3).jpg" alt="review" />
               <div class="review-txt">
                 <p class="nickname">NICKNAME</p>
                 <p>진짜 예뻐요. 어떤 옷에도 잘 어울리고, 포인트가 되어줘서 마음에 듭니다.</p>
@@ -337,34 +360,16 @@
           </div>
           <div class="swiper-slide">
             <div class="review-content">
-              <img src="images/keyring/keyring (2).jpg" alt="" />
+              <img src="images/reviewImg/review (4).jpg" alt="review" />
               <div class="review-txt">
                 <p class="nickname">NICKNAME</p>
-                <p>진짜 예뻐요. 어떤 옷에도 잘 어울리고, 포인트가 되어줘서 마음에 듭니다.</p>
+                <p>품질은 괜찮은데, 조금 무겁긴 해요. 그래도 디자인이 너무 예쁘고 괜찮아요.</p>
               </div>
             </div>
           </div>
           <div class="swiper-slide">
             <div class="review-content">
-              <img src="images/earring/earring_pic (1).jpg" alt="" />
-              <div class="review-txt">
-                <p class="nickname">NICKNAME</p>
-                <p>진짜 예뻐요. 어떤 옷에도 잘 어울리고, 포인트가 되어줘서 마음에 듭니다.</p>
-              </div>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="review-content">
-              <img src="images/earring/earring_pic (1).jpg" alt="" />
-              <div class="review-txt">
-                <p class="nickname">NICKNAME</p>
-                <p>진짜 예뻐요. 어떤 옷에도 잘 어울리고, 포인트가 되어줘서 마음에 듭니다.</p>
-              </div>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="review-content">
-              <img src="images/earring/earring_pic (1).jpg" alt="" />
+              <img src="images/keyring/keyring (2).jpg" alt="review" />
               <div class="review-txt">
                 <p class="nickname">NICKNAME</p>
                 <p>진짜 예뻐요. 어떤 옷에도 잘 어울리고, 포인트가 되어줘서 마음에 듭니다.</p>
@@ -387,11 +392,13 @@
             010-3625-1819<br />
             MON - FRI : 12PM - 7PM
           </p>
+          <div class="cs-bank">
           <p>
             bank<br />
             하나 174-910519-13307
           </p>
           <p>예금주 : 강한나</p>
+        </div>
         </div>
       </div>
     </footer>
